--- a/.github/workflows/push-master.yml
+++ b/.github/workflows/push-master.yml
@@ -2,7 +2,7 @@ name: Build project and deploy on Firebase Hosting
 'on':
   push:
     branches:
-      - master
+      - main
 jobs:
   build:
     name: Build project
