--- a/.firebaserc
+++ b/.firebaserc
@@ -4,7 +4,7 @@
     "time-sheet-9b403": {
       "hosting": {
         "time-sheet-9b403": [
-          "dist/time-sheet"
+          "time-sheet-9b403"
         ]
       }
     }
