Move from main to production

--- a/.github/workflows/push-production.yml
+++ b/.github/workflows/push-production.yml
@@ -2,7 +2,7 @@ name: Build project and deploy on Firebase Hosting
 'on':
   push:
     branches:
-      - main
+      - production
 jobs:
   build:
     name: Build project
