--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "time-sheet",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "homepage": "https://github.com/Gummiees/time-sheet",
   "scripts": {
     "ng": "ng",
@@ -29,7 +29,10 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "file-saver": "^2.0.5",
     "firebase": "^9.0.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.23",
     "moment": "^2.29.1",
     "ngx-quill": "^14.3.0",
     "primeicons": "^4.1.0",
@@ -38,6 +41,7 @@
     "rxfire": "^6.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.3",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -50,6 +54,7 @@
     "@angular-eslint/template-parser": "12.5.0",
     "@angular/cli": "~12.2.6",
     "@angular/compiler-cli": "~12.2.0",
+    "@types/file-saver": "^2.0.5",
     "@types/node": "^12.11.1",
     "@types/quill": "^1.3.10",
     "@typescript-eslint/eslint-plugin": "4.28.2",
